Fixed scrollbar

--- a/cards-web/public/css/global.css
+++ b/cards-web/public/css/global.css
@@ -1,8 +1,13 @@
 /** 
  * Bulma.css overrides 
  */
+
+/* Scrollbar fixes */
 html {
     overflow-y: initial !important;
+}
+body .navbar {
+    z-index: initial;
 }
 
 /* Forms */
